--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "path.document" : "../documents/",
     "path.page" : "../pages/",
 
-    "spider.valid_url" : "(.*nankai\\.edu\\.cn.*)|(202\\.113\\..*)|(222\\.30\\..*)|(.*baidu\\.com.*)",
+    "spider.valid_url" : "(.*nankai\\.edu\\.cn.*)|(202\\.113\\..*)|(222\\.30\\..*)",
     "spider.invalid_file_type" : "mp4|",
 
     "redis.host": "123.207.141.211",
