--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,10 @@
 {
-    "path.document" : "../documents/",
-    "path.page" : "../pages/",
+    "path.document" : "C:/Users/wmpen/Desktop/NKUSearchEngine/documents/",
+    "path.page" : "C:/Users/wmpen/Desktop/NKUSearchEngine/pages/",
 
-    "spider.valid_url" : "(.*nankai\\.edu\\.cn.*)|(202\\.113\\..*)|(222\\.30\\..*)",
+    "spider.valid_url" : "(.*nankai//.edu//.cn.*)|(202//.113//..*)|(222//.30//..*)",
     "spider.invalid_file_type" : "mp4",
+    "spider.browser_user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.119 Safari/537.36",
 
     "redis.host": "123.207.141.211",
     "redis.port": "18888",
