--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,19 @@
 {
-    "path.document" : "C:/Users/wmpen/Desktop/NKUSearchEngine/documents/",
-    "path.page" : "C:/Users/wmpen/Desktop/NKUSearchEngine/pages/",
-    "path.log" : "../logs/spider/",
+    "path.document" : "C:\\Users\\wmpen\\Desktop\\NKUSearchEngine\\documents\\",
+    "path.page" : "C:\\Users\\wmpen\\Desktop\\NKUSearchEngine\\pages\\",
+    "path.log" : "..\\logs\\spider\\",
+    "path.download_temp_dir": "C:\\Users\\wmpen\\Desktop\\NKUSearchEngine\\downloads\\",
 
     "spider.valid_url" : "(.*nankai\\.edu\\.cn.*)|(202\\.113//..*)|(222\\.30\\..*)",
     "spider.invalid_file_type" : "mp4",
     "spider.browser_user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.119 Safari/537.36",
+    "spider.wait_download_max_sec": 1.0,
 
     "redis.host": "123.207.141.211",
     "redis.port": "18888",
 
-    "job.default_interval": "86400",
-    "job.min_interval": "3600",
-    "job.max_interval": "8640000",
+    "job.default_interval": 86400,
+    "job.min_interval": 3600,
+    "job.max_interval": 8640000,
     "job.start_url": "http://www.nankai.edu.cn"
 }
