--- a/search-engine/pom.xml
+++ b/search-engine/pom.xml
@@ -85,6 +85,12 @@
             <version>20180813</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.0.1</version>
+        </dependency>
 
 
     </dependencies>
