ignore url which contains jsessionid

--- a/spider/config/config.json
+++ b/spider/config/config.json
@@ -5,7 +5,7 @@
   "path.download_temp_dir": "",
 
   "spider.valid_url" : "(.*nankai\\.edu\\.cn.*)|(202\\.113//..*)|(222\\.30\\..*)",
-  "spider.invalid_url" : "(.*lib.nankai\\.edu\\.cn.*)",
+  "spider.invalid_url" : "(.*opac.lib.nankai\\.edu\\.cn.*)|(.*jsessionid.*)",
   "spider.invalid_file_type" : "mp4",
   "spider.browser_user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.119 Safari/537.36",
   "spider.urlopen_timeout": 1.0,
